Fix icons alignment

--- a/src/assets/themes/rub.sass
+++ b/src/assets/themes/rub.sass
@@ -117,8 +117,10 @@ body
           right: 100%
           margin-right: 0.2em
           top: 0.1em
+          //left: -1.2em
           min-width: 1em
-          width: 1.18em
+          width: 1.2em
+          text-align: center
           font-family: "Font Awesome 6 Free"
           font-weight: 900
 
